images properly styled, uncovered issue with column positioning

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -7460,15 +7460,6 @@ img.mfp-img {
   .most-popular-container {
     display: none; } }
 
-.opinion-article {
-  padding: 2%;
-  border-left: 1px solid #e2e2e2;
-  border-right: 1px solid #e2e2e2;
-  border-bottom: 1px solid #e2e2e2; }
-  @media (min-width: 760px) {
-    .opinion-article {
-      padding: 6%; } }
-
 .opinion-container .opinion-image {
   display: none; }
   @media (min-width: 760px) {
@@ -7725,6 +7716,7 @@ body {
   background-color: #f7f7f7; }
 
 .slider-content {
+  padding-bottom: 8%;
   width: 100%;
   background-color: #FFFFFF;
   overflow: auto; }
